# GenAI

./: .gitattributes  claude_desktop_config.json
MCP/: package-lock.json  package.json
MCP/MCP-CLIENT/: adapter_fastapi.py  adapter_sse_simple.py  charts.py  charts_client_LLM.openai.py  create_manual_chart.py  echarts.py  generate_chart_spawnable.py  generate_chart_spawnable.py.save  list_anthropic_models.py  list_gemini_models.py  list_openai_models.py  package-lock.json  package.json  pmo_charts_client_LLM.openai copy.py  pmo_charts_client_LLM.openai.py  pmo_client.py  pmo_client_LLM.claude copy.py  pmo_client_LLM.claude.20Oct2025..py  pmo_client_LLM.claude.py  pmo_client_LLM.gemini.py  pmo_client_LLM.openai.py  pyproject.toml  sample-charts-client.py  test_mcp_d3_client.py
MCP/MCP-CLIENT/chat_memory/: session_20251021_220313_3b00a9.json  session_20251021_220503_a236ab.json  session_20251022_002518_dc3a9c.json  session_20251022_003126_97a143.json  session_20251022_003913_f296f4.json  session_20251022_004436_bbfd4e.json  session_20251022_004610_779d2e.json  session_20251022_005210_6537fd.json  session_20251022_010036_5d1290.json  session_20251022_011021_912f3d.json  session_20251022_011604_b7d2ab.json  session_20251022_011925_90ca6a.json  session_20251022_012244_1b576b.json  session_20251022_012706_16e05f.json  session_20251022_014637_5ae936.json  session_20251022_110100_2b14e6.json  session_20251022_115540_4a94fc.json
MCP/MCP-CLIENT/data-exports/: payload_get_filtered_projects_session_20251022_010036_5d1290_20251022_010251.json  (+3 more)
MCP/PMO/: chat_pmo.py  pmo copy.py  (+3 more)
(+54 files in other folders)
